RESOLVED FIXED30697
V8 bindings do not use feature ENABLE guards
https://bugs.webkit.org/show_bug.cgi?id=30697
Summary V8 bindings do not use feature ENABLE guards
Steve Block
Reported 2009-10-22 17:28:54 PDT
The V8 bindings in DerivedSourcesAllInOne.cpp, V8Index.cpp/h and DOMObjectsInclude.h (in WebCore/bindings/v8/) do not make consistent use of feature ENABLE guards. This means that the build errors occur when some features are disabled. The features in question are as follows. - DATABASE - WORKERS - SHARED_WORKERS - SVG - XPATH - XSLT - INSPECTOR
Attachments
Patch 1 for Bug 30697 (15.87 KB, patch)
2009-10-23 03:05 PDT, Steve Block
eric: review+
commit-queue: commit-queue-
Steve Block
Comment 1 2009-10-23 03:05:57 PDT
Eric Seidel (no email)
Comment 2 2009-10-23 11:40:44 PDT
Comment on attachment 41722 [details] Patch 1 for Bug 30697 LGTM. Nice cleanup!
Eric Seidel (no email)
Comment 3 2009-10-23 14:03:54 PDT
Comment on attachment 41722 [details] Patch 1 for Bug 30697 Steve is not a committer to marking this cq+ even though he didn't request auto-commit.
WebKit Commit Bot
Comment 4 2009-10-23 15:33:10 PDT
Comment on attachment 41722 [details] Patch 1 for Bug 30697 Rejecting patch 41722 from commit-queue. Failed to run "['git', 'svn', 'dcommit']" exit_code: 1 Last 500 characters of output: ctsInclude.h M WebCore/bindings/v8/DerivedSourcesAllInOne.cpp M WebCore/bindings/v8/V8Index.cpp M WebCore/bindings/v8/V8Index.h A repository hook failed: MERGE request failed on '/repository/webkit/trunk': Commit blocked by pre-commit hook (exit code 1) with output: svnlook: Can't write to stream: Broken pipe The following ChangeLog files contain OOPS: trunk/WebCore/ChangeLog Please don't ever say "OOPS" in a ChangeLog file. at /usr/local/libexec/git-core//git-svn line 469
Ben Murdoch
Comment 5 2009-10-26 03:51:43 PDT
Will land manually to fix up the Changelog.
Ben Murdoch
Comment 6 2009-10-26 07:19:04 PDT
Landed as r50057.
Note You need to log in before you can comment on or make changes to this bug.