Adds feature ENABLE guards to V8 bindings. https://bugs.webkit.org/show_bug.cgi?id=30697

Patch by Steve Block <steveblock@google.com> on 2009-10-26
Reviewed by Eric Seidel.

This adds guards for the following features to the V8 bindings,
to allow builds with V8 to succeed when these features are not enabled.
- DATABASE
- WORKERS
- SHARED_WORKERS
- SVG
- XPATH
- XSLT
- INSPECTOR

This is a build fix only, no new tests required.

* bindings/v8/DOMObjectsInclude.h: Modified.
* bindings/v8/DerivedSourcesAllInOne.cpp: Modified.
* bindings/v8/V8Index.cpp: Modified.
* bindings/v8/V8Index.h: Modified.



Canonical link: https://commits.webkit.org/41504@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50057 268f45cc-cd09-0410-ab3c-d52691b4dbfc