WebCore/bindings/v8/DOMObjectsInclude.h
@@ -31,7 +31,6 @@
 #ifndef DOMObjectsInclude_h
 #define DOMObjectsInclude_h
 
-#include "AbstractWorker.h"
 #include "BarInfo.h"
 #include "BeforeLoadEvent.h"
 #include "CanvasActiveInfo.h"
@@ -77,7 +76,6 @@
 #include "CSSValueList.h"
 #include "CSSVariablesDeclaration.h"
 #include "CSSVariablesRule.h"
-#include "Database.h"
 #include "DocumentType.h"
 #include "DocumentFragment.h"
 #include "DOMCoreException.h"
@@ -106,7 +104,6 @@
 #include "HTMLSelectElement.h"
 #include "HTMLOptionsCollection.h"
 #include "ImageData.h"
-#include "InspectorBackend.h"
 #include "KeyboardEvent.h"
 #include "Location.h"
 #include "Media.h"
@@ -139,20 +136,12 @@
 #include "ScriptExecutionContext.h"
 #include "SecurityOrigin.h"
 #include "Settings.h"
-#include "SharedWorker.h"
-#include "SharedWorkerContext.h"
-#include "SQLTransaction.h"
-#include "SQLResultSet.h"
-#include "SQLResultSetRowList.h"
 #include "StyleSheet.h"
 #include "StyleSheetList.h"
-#include "SVGColor.h"
-#include "SVGPaint.h"
 #include "TextEvent.h"
 #include "TextMetrics.h"
 #include "TimeRanges.h"
 #include "TreeWalker.h"
-#include "XSLTProcessor.h"
 #include "V8AbstractEventListener.h"
 #include "V8CustomEventListener.h"
 #include "V8DOMWindow.h"
@@ -173,14 +162,17 @@
 #include "XMLHttpRequestProgressEvent.h"
 #include "XMLHttpRequestUpload.h"
 #include "XMLSerializer.h"
-#include "XPathException.h"
-#include "XPathExpression.h"
-#include "XPathNSResolver.h"
-#include "XPathResult.h"
 
 #if ENABLE(OFFLINE_WEB_APPLICATIONS)
 #include "DOMApplicationCache.h"
 #endif
+
+#if ENABLE(DATABASE)
+#include "Database.h"
+#include "SQLTransaction.h"
+#include "SQLResultSet.h"
+#include "SQLResultSetRowList.h"
+#endif // DATABASE
 
 #if ENABLE(DATAGRID)
 #include "DataGridColumn.h"
@@ -195,6 +187,7 @@
 #if ENABLE(SVG)
 #include "SVGAngle.h"
 #include "SVGAnimatedPoints.h"
+#include "SVGColor.h"
 #include "SVGElement.h"
 #include "SVGElementInstance.h"
 #include "SVGElementInstanceList.h"
@@ -202,6 +195,7 @@
 #include "SVGLength.h"
 #include "SVGLengthList.h"
 #include "SVGNumberList.h"
+#include "SVGPaint.h"
 #include "SVGPathSeg.h"
 #include "SVGPathSegArc.h"
 #include "SVGPathSegClosePath.h"
@@ -231,12 +225,18 @@
 #endif
 
 #if ENABLE(WORKERS)
+#include "AbstractWorker.h"
 #include "DedicatedWorkerContext.h"
 #include "Worker.h"
 #include "WorkerContext.h"
 #include "WorkerLocation.h"
 #include "WorkerNavigator.h"
 #endif // WORKERS
+
+#if ENABLE(SHARED_WORKERS)
+#include "SharedWorker.h"
+#include "SharedWorkerContext.h"
+#endif  // SHARED_WORKERS
 
 #if ENABLE(NOTIFICATIONS)
 #include "Notification.h"
@@ -245,7 +245,19 @@
 
 #if ENABLE(XPATH)
 #include "XPathEvaluator.h"
+#include "XPathException.h"
+#include "XPathExpression.h"
+#include "XPathNSResolver.h"
+#include "XPathResult.h"
 #endif // XPATH
+
+#if ENABLE(XSLT)
+#include "XSLTProcessor.h"
+#endif // XSLT
+
+#if ENABLE(INSPECTOR)
+#include "InspectorBackend.h"
+#endif // INSPECTOR
 
 namespace WebCore {
 
