WebCore/bindings/v8/DerivedSourcesAllInOne.cpp
@@ -28,10 +28,9 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-// This source file coalesces the HTML elements into a single object file to
+// This source file coalesces the V8 derived sources into a single object file to
 // reduce bloat and allow us to link release builds on 32-bit Windows.
 
-#include "bindings/V8AbstractWorker.cpp"
 #include "bindings/V8Attr.cpp"
 #include "bindings/V8BarInfo.cpp"
 #include "bindings/V8BeforeLoadEvent.cpp"
@@ -80,16 +79,11 @@
 #include "bindings/V8CSSValueList.cpp"
 #include "bindings/V8CSSVariablesDeclaration.cpp"
 #include "bindings/V8CSSVariablesRule.cpp"
-#include "bindings/V8Database.cpp"
 #include "bindings/V8DataGridColumn.cpp"
 #include "bindings/V8DataGridColumnList.cpp"
-#include "bindings/V8DedicatedWorkerContext.cpp"
 #include "bindings/V8Document.cpp"
 #include "bindings/V8DocumentFragment.cpp"
 #include "bindings/V8DocumentType.cpp"
-#if ENABLE(OFFLINE_WEB_APPLICATIONS)
-#include "bindings/V8DOMApplicationCache.cpp"
-#endif
 #include "bindings/V8DOMCoreException.cpp"
 #include "bindings/V8DOMImplementation.cpp"
 #include "bindings/V8DOMParser.cpp"
@@ -174,7 +168,6 @@
 #include "bindings/V8HTMLUListElement.cpp"
 #include "bindings/V8HTMLVideoElement.cpp"
 #include "bindings/V8ImageData.cpp"
-#include "bindings/V8InspectorBackend.cpp"
 #include "bindings/V8KeyboardEvent.cpp"
 #include "bindings/V8Location.cpp"
 #include "bindings/V8Media.cpp"
@@ -207,18 +200,65 @@
 #include "bindings/V8Rect.cpp"
 #include "bindings/V8RGBColor.cpp"
 #include "bindings/V8Screen.cpp"
-#include "bindings/V8SharedWorker.cpp"
-#include "bindings/V8SharedWorkerContext.cpp"
-#include "bindings/V8SQLError.cpp"
-#include "bindings/V8SQLResultSet.cpp"
-#include "bindings/V8SQLResultSetRowList.cpp"
-#include "bindings/V8SQLTransaction.cpp"
+#include "bindings/V8StyleSheet.cpp"
+#include "bindings/V8StyleSheetList.cpp"
+#include "bindings/V8Text.cpp"
+#include "bindings/V8TextEvent.cpp"
+#include "bindings/V8TextMetrics.cpp"
+#include "bindings/V8TimeRanges.cpp"
+#include "bindings/V8TreeWalker.cpp"
+#include "bindings/V8UIEvent.cpp"
+#include "bindings/V8ValidityState.cpp"
+#include "bindings/V8WebKitAnimationEvent.cpp"
+#include "bindings/V8WebKitCSSKeyframeRule.cpp"
+#include "bindings/V8WebKitCSSKeyframesRule.cpp"
+#include "bindings/V8WebKitCSSMatrix.cpp"
+#include "bindings/V8WebKitCSSTransformValue.cpp"
+#include "bindings/V8WebKitPoint.cpp"
+#include "bindings/V8WebKitTransitionEvent.cpp"
+#include "bindings/V8WheelEvent.cpp"
+#include "bindings/V8XMLHttpRequest.cpp"
+#include "bindings/V8XMLHttpRequestException.cpp"
+#include "bindings/V8XMLHttpRequestProgressEvent.cpp"
+#include "bindings/V8XMLHttpRequestUpload.cpp"
+#include "bindings/V8XMLSerializer.cpp"
+
+#if ENABLE(OFFLINE_WEB_APPLICATIONS)
+#include "bindings/V8DOMApplicationCache.cpp"
+#endif
+
 #if ENABLE(DOM_STORAGE)
 #include "bindings/V8Storage.cpp"
 #include "bindings/V8StorageEvent.cpp"
 #endif
-#include "bindings/V8StyleSheet.cpp"
-#include "bindings/V8StyleSheetList.cpp"
+
+#if ENABLE(WEB_SOCKETS)
+#include "bindings/V8WebSocket.cpp"
+#endif
+
+#if ENABLE(DATABASE)
+#include "bindings/V8Database.cpp"
+#include "bindings/V8SQLError.cpp"
+#include "bindings/V8SQLResultSet.cpp"
+#include "bindings/V8SQLResultSetRowList.cpp"
+#include "bindings/V8SQLTransaction.cpp"
+#endif
+
+#if ENABLE(WORKERS)
+#include "bindings/V8AbstractWorker.cpp"
+#include "bindings/V8DedicatedWorkerContext.cpp"
+#include "bindings/V8Worker.cpp"
+#include "bindings/V8WorkerContext.cpp"
+#include "bindings/V8WorkerLocation.cpp"
+#include "bindings/V8WorkerNavigator.cpp"
+#endif
+
+#if ENABLE(SHARED_WORKERS)
+#include "bindings/V8SharedWorker.cpp"
+#include "bindings/V8SharedWorkerContext.cpp"
+#endif
+
+#if ENABLE(SVG)
 #include "bindings/V8SVGAElement.cpp"
 #include "bindings/V8SVGAltGlyphElement.cpp"
 #include "bindings/V8SVGAngle.cpp"
@@ -327,36 +367,20 @@
 #include "bindings/V8SVGUseElement.cpp"
 #include "bindings/V8SVGViewElement.cpp"
 #include "bindings/V8SVGZoomEvent.cpp"
-#include "bindings/V8Text.cpp"
-#include "bindings/V8TextEvent.cpp"
-#include "bindings/V8TextMetrics.cpp"
-#include "bindings/V8TimeRanges.cpp"
-#include "bindings/V8TreeWalker.cpp"
-#include "bindings/V8UIEvent.cpp"
-#include "bindings/V8ValidityState.cpp"
-#include "bindings/V8WebKitAnimationEvent.cpp"
-#include "bindings/V8WebKitCSSKeyframeRule.cpp"
-#include "bindings/V8WebKitCSSKeyframesRule.cpp"
-#include "bindings/V8WebKitCSSMatrix.cpp"
-#include "bindings/V8WebKitCSSTransformValue.cpp"
-#include "bindings/V8WebKitPoint.cpp"
-#include "bindings/V8WebKitTransitionEvent.cpp"
-#if ENABLE(WEB_SOCKETS)
-#include "bindings/V8WebSocket.cpp"
 #endif
-#include "bindings/V8WheelEvent.cpp"
-#include "bindings/V8Worker.cpp"
-#include "bindings/V8WorkerContext.cpp"
-#include "bindings/V8WorkerLocation.cpp"
-#include "bindings/V8WorkerNavigator.cpp"
-#include "bindings/V8XMLHttpRequest.cpp"
-#include "bindings/V8XMLHttpRequestException.cpp"
-#include "bindings/V8XMLHttpRequestProgressEvent.cpp"
-#include "bindings/V8XMLHttpRequestUpload.cpp"
-#include "bindings/V8XMLSerializer.cpp"
+
+#if ENABLE(XPATH)
 #include "bindings/V8XPathEvaluator.cpp"
 #include "bindings/V8XPathException.cpp"
 #include "bindings/V8XPathExpression.cpp"
 #include "bindings/V8XPathNSResolver.cpp"
 #include "bindings/V8XPathResult.cpp"
+#endif
+
+#if ENABLE(XSLT)
 #include "bindings/V8XSLTProcessor.cpp"
+#endif
+
+#if ENABLE(INSPECTOR)
+#include "bindings/V8InspectorBackend.cpp"
+#endif
